--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+/src/main/resources/terraform/terraform.tfstate.backup
+/src/main/resources/terraform/terraform.tfstate
+/src/main/resources/terraform/.terraform.lock.hcl
+/src/main/resources/terraform/.terraform/
